networking-home/httproutes/garden-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: garden-home
  namespace: garden
spec:
  parentRefs:
    - name: envoy-gateway-home
      namespace: envoy-gateway-system
  hostnames:
    - "garden.home.timosur.com"
  rules:
    # All routes go through nginx auth proxy
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: garden-nginx-auth
          port: 80
